sg.tf
resource "aws_security_group" "ssh_anywhere" {
  name        = "sonu-ssh_anywhere"
  description = "ssh from anywhere"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sonu-ssh-anywhere-sg"
  }
}

resource "aws_security_group" "ssh_vpc_only" {
  name        = "sonu-ssh-vpc-only"
  description = "Allow SSH only from within VPC CIDR"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [module.vpc.vpc_cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sonu-ssh-vpc-only-sg"
  }
}

resource "aws_security_group" "internet" {
  name        = "intenet sg"
  description = "allow internet inbound"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sonu-internet-sg"
  }
}
